# BezierClock

./: .gitignore  BezierCanvas.qml  BezierClock.qmlproject  BezierDigit.qml  BezierDigitAnimator.qml  BezierDigits.qml  FpsCounter.qml  LICENSE.md  README.md  main.cpp  main.qml  qml.qrc
docs/: ffmpeg_notes.txt
qml/: AdditionalFunctions.js  BezierAnimator.qml  BezierCanvas.qml  BezierClock.qml  BezierClock.qmlproject  BezierDigit.qml  BezierDigits.qml  BezierInit.qml  BezierSettings.qml  BezierSetup.qml  CanvasFunctions.js  CoreFunctions.js  FpsCounter.qml  JsCanvasFunctions.js  JsConfigUiHelper.js  JsCoreFunctions.js  UiBaseOverlay.qml  UiColorBox.qml  UiComboBox.qml  UiFpsOverlay.qml  UiSpinBox.qml  config.qml  main.qml
qml/NonKDE/: BezierSettingsQt.qml  BezierSetupQt.qml  JsMainUiHelper.js  UiOptionsOverlay.qml  main.qml  mainQt.qml
utils/: CMakeLists.txt  PKGBUILD  createDistPackage.sh  installDistPackage.sh  metadata.desktop  package.sh  uninstallDistPackage.sh
utils/macros/: DigitCoordRefactor.mac  PDE_to_QML.mac
xml/: main.xml
